# localization_in_auto_driving

lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/cmake/: YAML.cmake
lidar_localization/config/mapping/: loop_closing.yaml
lidar_localization/include/lidar_localization/data_pretreat/: data_pretreat_flow.hpp
lidar_localization/include/lidar_localization/front_end/: front_end.hpp  front_end_flow.hpp
lidar_localization/include/lidar_localization/mapping/back_end/: back_end.hpp  back_end_flow.hpp
lidar_localization/include/lidar_localization/mapping/front_end/: front_end.hpp  front_end_flow.hpp
lidar_localization/include/lidar_localization/mapping/loop_closing/: loop_closing.hpp  loop_closing_flow.hpp
lidar_localization/include/lidar_localization/mapping/viewer/: viewer.hpp  viewer_flow.hpp
lidar_localization/include/lidar_localization/matching/: matching.hpp  matching_flow.hpp
lidar_localization/include/lidar_localization/models/cloud_filter/: box_filter.hpp
lidar_localization/include/lidar_localization/models/graph_optimizer/: interface_graph_optimizer.hpp
lidar_localization/include/lidar_localization/models/registration/: ndt_registration.hpp  registration_interface.hpp
lidar_localization/include/lidar_localization/publisher/: cloud_publisher.hpp  key_frame_publisher.hpp  loop_pose_publisher.hpp  odometry_publisher.hpp
lidar_localization/include/lidar_localization/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  loop_pose.hpp  velocity_data.hpp
lidar_localization/include/lidar_localization/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  key_frame_subscriber.hpp  loop_pose_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
lidar_localization/include/lidar_localization/tf_listener/: tf_listener.hpp
lidar_localization/include/lidar_localization/tools/: file_manager.hpp  tic_toc.hpp
lidar_localization/src/: front_end_node.cpp
lidar_localization/src/apps/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  loop_closing_node.cpp  viewer_node.cpp
lidar_localization/src/data_pretreat/: data_pretreat_flow.cpp
lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
lidar_localization/src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/mapping/loop_closing/: loop_closing.cpp  loop_closing_flow.cpp
lidar_localization/src/mapping/viewer/: viewer.cpp  viewer_flow.cpp
lidar_localization/src/matching/: matching.cpp  matching_flow.cpp
lidar_localization/src/models/cloud_filter/: box_filter.cpp
lidar_localization/src/models/graph_optimizer/: interface_graph_optimizer.cpp
lidar_localization/src/models/registration/: ndt_registration.cpp
lidar_localization/src/models/scan_adjust/: distortion_adjust.cpp
lidar_localization/src/publisher/: cloud_publisher.cpp  key_frame_publisher.cpp  loop_pose_publisher.cpp  odometry_publisher.cpp  tf_broadcaster.cpp
lidar_localization/src/sensor_data/: gnss_data.cpp  imu_data.cpp  loop_pose.cpp  velocity_data.cpp
lidar_localization/src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  key_frame_subscriber.cpp  loop_pose_subscriber.cpp  odometry_subscriber.cpp  velocity_subscriber.cpp
lidar_localization/src/tf_listener/: tf_lisener.cpp
lidar_localization/src/tools/: file_manager.cpp
(+5 files in other folders)
